--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -24,6 +24,7 @@
         android:layout_marginTop="0dp"
         android:layout_toEndOf="@+id/ivProfileImage"
         android:backgroundTint="#FFFFFF"
+        android:fontFamily="sans-serif-black"
         tools:text="Nick Stazer" />
 
     <TextView
@@ -35,4 +36,17 @@
         android:layout_marginTop="2dp"
         android:layout_toEndOf="@+id/ivProfileImage"
         tools:text="This is my sample tweet" />
+
+    <TextView
+        android:id="@+id/tvRelativeTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/tvBody"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="0dp"
+        android:fontFamily="sans-serif"
+        android:textAlignment="textEnd"
+        tools:text="25 mins ago" />
 </RelativeLayout>
